--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,7 +96,7 @@
     "title": "If you want to top up",
     "step_1": "1. Click 'Top up'.",
     "step_2": "2. Select the payment method you want to top up.",
-    "step_3": "3. The '88LOTTO' accounts that can be deposited with the selected payment method will appear.",
+    "step_3": "3. The 'ALADIN' accounts that can be deposited with the selected payment method will appear.",
     "how_to_topup": "Click to see how to top up"
   },
   "withdraw_instructions": {
@@ -125,11 +125,11 @@
   "withdraw_issue": "If you encounter any issues with the withdraw",
   "contact": "Contact",
   "official_channels": "Official Channels",
-  "official_channel_info": "The following channels are the official channels of 88LOTTO.Like & Follow these channels to check daily promotions.",
+  "official_channel_info": "The following channels are the official channels of ALADIN.Like & Follow these channels to check daily promotions.",
   "follow_page": "Follow Page",
   "join_channel": "Join Channel",
   "admin_response_delay": "If the Admin Team does not respond within 3 minutes, the information will be resent.",
-  "service_availability": "88LOTTO provides 24/7 services without any holidays.",
+  "service_availability": "ALADIN provides 24/7 services without any holidays.",
   "deposit_processing_time": "If you deposit within the designated service hours, the funds will arrive within 3 minutes.",
   "confirmation": "Okay",
   "incorrect_deposit_info": "Your transaction details are incorrect.Please try again.",
