--- a/src/locales/my.json
+++ b/src/locales/my.json
@@ -96,7 +96,7 @@
     "title": "ငွေဖြည့်လိုပါက",
     "step_1": "၁။ 'ငွေဖြည့်ရန်' ကိုနှိပ်ပါ။",
     "step_2": "၂။ မိမိငွေဖြည့်မည့်ဘဏ်တစ်ခုရွေးပါ။",
-    "step_3": "၃။ သက်ဆိုင်ရာ Pay ဖြင့်ငွေသွင်းနိုင်သော '88LOTTO' မှအကောင့်များပေါ်လာပါလိမ့်မည်။",
+    "step_3": "၃။ သက်ဆိုင်ရာ Pay ဖြင့်ငွေသွင်းနိုင်သော 'ALADIN' မှအကောင့်များပေါ်လာပါလိမ့်မည်။",
     "how_to_topup": "ငွေဖြည့်နည်းကြည့်ရန်နှိပ်ပါ။"
   },
   "withdraw_instructions": {
@@ -125,11 +125,11 @@
   "withdraw_issue": "ငွေဖြည့်ရန်အဆင်မပြေမှုတစ်စုံတစ်ရာရှိပါက",
   "contact": "ဆက်သွယ်ရန်",
   "official_channels": "တရားဝင် Channel များ",
-  "official_channel_info": "အောက်ပါ Channel များသည် 88LOTTO တရားဝင် Channel များဖြစ်ပါသည်။နေ့စဥ် Promotion များကြည့်ရှုရန် Channel များကို Like & Follow လုပ်ထားလို့ပါတယ်။",
+  "official_channel_info": "အောက်ပါ Channel များသည် ALADIN တရားဝင် Channel များဖြစ်ပါသည်။နေ့စဥ် Promotion များကြည့်ရှုရန် Channel များကို Like & Follow လုပ်ထားလို့ပါတယ်။",
   "follow_page": "Page ကို Follow လုပ်ပါ",
   "join_channel": "ချန်နယ်သို့ချိတ်ဆက်ပါ",
   "admin_response_delay": "Admin Team ဘက်မှ ၃ မိနစ်အတွင်းအကြောင်းမပြန်သေးပါ။အချက်လက်ကို ပြန်လည်ပို့ပေးလိမ့်ပါမည်။",
-  "service_availability": "88LOTTO မှာနေ့စဥ် (၂၄ နာရီ) ပိတ်ရက်မရှိ၀န်ဆောင်မှုများပေးနေပါသည်။",
+  "service_availability": "ALADIN မှာနေ့စဥ် (၂၄ နာရီ) ပိတ်ရက်မရှိ၀န်ဆောင်မှုများပေးနေပါသည်။",
   "deposit_processing_time": "သတ်မှတ်ထားသောဝန်ဆောင်မှုအချိန်တွင်ငွေဖြည့်ပါက (3)မိနစ် အတွင်းငွေရောက်ပါမည်။",
   "confirmation": "ကောင်းပြီ",
   "incorrect_deposit_info": "လူကြီးမင်း၏ ငွေလွှဲအချက်အလက် မှားယွင်းနေပါသည်။ ထပ်မံကြိုးစားဖြည့်သွင်းပေးပါ။",
