--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,7 @@
   "Wallet": "Wallet",
   "Service": "Service",
   "Profile": "Profile",
-  "service_description": "The following phone numbers are '88 LOTTO' company service numbers. We provide service 24 hours a day, seven days a week.",
+  "service_description": "The following phone numbers are 'ALADIN' company service numbers. We provide service 24 hours a day, seven days a week.",
   "service_phone_numbers": "Service phone numbers",
   "all": "All",
   "hundred": "Hundred Numbers",
