--- a/src/locales/my.json
+++ b/src/locales/my.json
@@ -28,7 +28,7 @@
   "Wallet": "ပိုက်ဆံအိတ်",
   "Service": "ဝန်ဆောင်မှု",
   "Profile": "ကျွန်ုပ်",
-  "service_description": "အောက်ပါဖုန်းနံပါတ်သည် '88 LOTTO' ကုမ္ပဏီ၏ဝန်ဆောင်မှုဖုန်းနံပါတ်များဖြစ်သည်။နေ့စဉ်(၂၄) နာရီ ၊ ပိတ်ရက်မရှိဝန်ဆောင်ပေးနေပါသည်",
+  "service_description": "အောက်ပါဖုန်းနံပါတ်သည် 'ALADIN' ကုမ္ပဏီ၏ဝန်ဆောင်မှုဖုန်းနံပါတ်များဖြစ်သည်။နေ့စဉ်(၂၄) နာရီ ၊ ပိတ်ရက်မရှိဝန်ဆောင်ပေးနေပါသည်",
   "service_phone_numbers": "ဝန်ဆောင်မှုဖုန်းနံပါတ်များ",
   "all": "အားလုံး",
   "hundred": "ရာပြည့်ဂဏန်းများ",
