--- a/src/locales/my.json
+++ b/src/locales/my.json
@@ -125,7 +125,7 @@
   "withdraw_issue": "ငွေဖြည့်ရန်အဆင်မပြေမှုတစ်စုံတစ်ရာရှိပါက",
   "contact": "ဆက်သွယ်ရန်",
   "official_channels": "တရားဝင် Channel များ",
-  "official_channel_info": "အောက်ပါ Channel များသည် ALADIN တရားဝင် Channel များဖြစ်ပါသည်။နေ့စဥ် Promotion များကြည့်ရှုရန် Channel များကို Like & Follow လုပ်ထားလို့ပါတယ်။",
+  "official_channel_info": "အောက်ပါ Channel များသည် ALADIN တရားဝင် Channel များဖြစ်ပါသည်။နေ့စဥ် Promotion များကြည့်ရှုရန် Channel များကို Like & Follow လုပ်ထားလိုပါတယ်။",
   "follow_page": "Page ကို Follow လုပ်ပါ",
   "join_channel": "ချန်နယ်သို့ချိတ်ဆက်ပါ",
   "admin_response_delay": "Admin Team ဘက်မှ ၃ မိနစ်အတွင်းအကြောင်းမပြန်သေးပါ။အချက်လက်ကို ပြန်လည်ပို့ပေးလိမ့်ပါမည်။",
