--- a/src/locales/my.json
+++ b/src/locales/my.json
@@ -28,8 +28,8 @@
   "Wallet": "ပိုက်ဆံအိတ်",
   "Service": "ဝန်ဆောင်မှု",
   "Profile": "ကျွန်ုပ်",
-  "service_description": "အောက်ပါဖုန်းနံပါတ်သည် 'ALADIN' ကုမ္ပဏီ၏ဝန်ဆောင်မှုဖုန်းနံပါတ်များဖြစ်သည်။နေ့စဉ်(၂၄) နာရီ ၊ ပိတ်ရက်မရှိဝန်ဆောင်ပေးနေပါသည်",
-  "service_phone_numbers": "ဝန်ဆောင်မှုဖုန်းနံပါတ်များ",
+  "service_description": "နေ့စဉ်(၂၄) နာရီ ၊ ပိတ်ရက်မရှိဝန်ဆောင်ပေးနေပါသည်",
+  "service_phone_numbers": "ဝန်ဆောင်မှု",
   "all": "အားလုံး",
   "hundred": "ရာပြည့်ဂဏန်းများ",
   "same": "လုံးတူထွိုင်",
@@ -112,19 +112,20 @@
   "transfer_instruction": "ကျေးဇူးပြု၍အောက်ပါအကောင့်သို့ငွေလွှဲပါ။အခြားအကောင့်များသို့ငွေလွှဲခြင်းလုံးဝလက်မခံပါ။ဖုန်းဘေလုံးဝလက်မခံပါ။",
   "choose_deposit_account": "မိမိငွေဖြည့်မည့်အကောင့်တစ်ခုရွေးပါ",
   "account_name": "အကောင့်အမည်",
-  "account_number": "အကောင့်နံပတ်",
+  "account_number": "အကောင့်နံပါတ်",
   "min_transfer_amount": "အနည်းဆုံးလွှဲနိုင်သောပမာဏ",
   "max_transfer_amount": "အများဆုံးလွှဲနိုင်သောပမာဏ",
   "min_withdraw_amount": "အနည်းဆုံးထုတ်နိုင်သောပမာဏ",
   "max_withdraw_amount": "အများဆုံးထုတ်နိုင်သောပမာဏ",
   "amount": "ငွေပမာဏ",
   "enter_amount": "ငွေပမာဏဖြည့်ပါ",
-  "transaction_id": "လုပ်ဆောင်မှုအမှတ်စဥ်(နောက်ဆုံးဂဏန်း ၆ လုံး)",
+  "transaction_id": "လုပ်ဆောင်မှုအမှတ်စဥ်(နောက်ဆုံးဂဏန်း ၅ လုံး)",
   "submit": "တင်ပြမည်",
+  "Promo":"ပရိုမို",
   "payment_issue": "ငွေဖြည့်ရန်အဆင်မပြေမှုတစ်စုံတစ်ရာရှိပါက",
   "withdraw_issue": "ငွေဖြည့်ရန်အဆင်မပြေမှုတစ်စုံတစ်ရာရှိပါက",
   "contact": "ဆက်သွယ်ရန်",
-  "official_channels": "တရားဝင် Channel များ",
+  "official_channels": "Channel များ",
   "official_channel_info": "အောက်ပါ Channel များသည် ALADIN တရားဝင် Channel များဖြစ်ပါသည်။နေ့စဥ် Promotion များကြည့်ရှုရန် Channel များကို Like & Follow လုပ်ထားလိုပါတယ်။",
   "follow_page": "Page ကို Follow လုပ်ပါ",
   "join_channel": "ချန်နယ်သို့ချိတ်ဆက်ပါ",
