--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,8 +28,8 @@
   "Wallet": "Wallet",
   "Service": "Service",
   "Profile": "Profile",
-  "service_description": "The following phone numbers are 'ALADIN' company service numbers. We provide service 24 hours a day, seven days a week.",
-  "service_phone_numbers": "Service phone numbers",
+  "service_description": "We provide service 24 hours a day, seven days a week.",
+  "service_phone_numbers": "Service",
   "all": "All",
   "hundred": "Hundred Numbers",
   "same": "Same Numbers",
@@ -119,12 +119,13 @@
   "max_withdraw_amount": "Maximum Withdraw Amount",
   "amount": "Amount",
   "enter_amount": "Enter Amount",
-  "transaction_id": "Transaction ID (Last 6 digits)",
+  "transaction_id": "Transaction ID (Last ၅ digits)",
   "submit": "Submit",
   "payment_issue": "If you encounter any issues with the deposit",
   "withdraw_issue": "If you encounter any issues with the withdraw",
   "contact": "Contact",
-  "official_channels": "Official Channels",
+  "Promo":"Promo",
+  "official_channels": "Channels",
   "official_channel_info": "The following channels are the official channels of ALADIN.Like & Follow these channels to check daily promotions.",
   "follow_page": "Follow Page",
   "join_channel": "Join Channel",
