--- a/src/locales/my.json
+++ b/src/locales/my.json
@@ -121,7 +121,7 @@
   "enter_amount": "ငွေပမာဏဖြည့်ပါ",
   "transaction_id": "လုပ်ဆောင်မှုအမှတ်စဥ်(နောက်ဆုံးဂဏန်း ၅ လုံး)",
   "submit": "တင်ပြမည်",
-  "Promo":"ပရိုမို",
+  "Promo":"ပရိုမိုးရှင်း",
   "payment_issue": "ငွေဖြည့်ရန်အဆင်မပြေမှုတစ်စုံတစ်ရာရှိပါက",
   "withdraw_issue": "ငွေဖြည့်ရန်အဆင်မပြေမှုတစ်စုံတစ်ရာရှိပါက",
   "contact": "ဆက်သွယ်ရန်",
